New hosting details

--- a/app/webroot/css/app.css
+++ b/app/webroot/css/app.css
@@ -2,6 +2,8 @@ a {
     color: #e5006c;
 }
 
+.dl-horizontal dt { text-align:left !important;}
+
 body {
     -webkit-font-smoothing: antialiased;
     -webkit-text-size-adjust: 100%;
